# Mol-Rep-Haskell-Bayes

./: .gitignore  CHANGELOG.md  Constants.hs  DemoProbProg.hs  Extra.hs  GenerativeMolecule.hs  Group.hs  LICENSE  LogPModel.hs  Molecule.hs  Orbital.hs  Parser.hs  ParserTwo.hs  README.md  RandomGraph.hs  Reaction.hs  Serialisable.hs  Test.hs  TestInf.hs  TestInference.hs  Validator.hs  chemalgprog.cabal  package.yaml  shell.nix  stack.yaml
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
examples/: ParseMolecules.hs
molecules/: Methane.hs
src/: Benzene.hs  Constants.hs  Coordinate.hs  ExtraF.hs  Group.hs  LazyPPL.hs  LogPModel.hs  Molecule.hs  Orbital.hs  Parser.hs  ParserSingle.hs  Reaction.hs  SampleMolecules.hs  Serialisable.hs  SlaterTypeOrbital.hs  TestInference.hs  Validator.hs  ValidatorDietz.hs
src/Chem/: Dietz.hs  Molecule.hs  Validate.hs
src/Chem/IO/: SDF.hs
src/Chem/Molecule/: Coordinate.hs
test/: EdgeProperties.hs  ParserRoundTrip.hs  ValidationProperties.hs
