cabal-version:       >=1.10

name:                chemalgprog
version:             0.1.0.0
synopsis:            Chemical Algorithmic Programming
description:         A library for molecular representation and probabilistic programming.
license:             AGPL-3.0
license-file:        LICENSE.txt
author:              Oliver Goldstein
maintainer:          oliverjgoldstein@gmail.com, oliver.goldstein@cs.ox.ac.uk, sammarch2@gmail.com
copyright:           2025 Oliver Goldstein
category:            Development
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

library
  hs-source-dirs:      .
  exposed-modules:     LazyPPL, Molecule, Constants, Distr, Coordinate, Group, Orbital, Parser, Reaction, Serialisable
  build-depends:       base >= 4.13 && < 4.21,
                       monad-extras,
                       transformers,
                       mtl,
                       deepseq,
                       containers,
                       ghc-heap,
                       megaparsec >= 9.0 && < 10.0,
                       vector,
                       directory,
                       filepath,
                       bytestring,
                       text,
                       random,   
                       log-domain,
                       statistics,    
                       array          
  default-language:    Haskell2010

executable chemalgprog
  main-is:             Test.hs
  hs-source-dirs:      .
  build-depends:       base >= 4.13 && < 4.21,
                       monad-extras,
                       transformers,
                       mtl,
                       deepseq,
                       containers,
                       ghc-heap,
                       megaparsec >= 9.0 && < 10.0,
                       vector,
                       directory,
                       filepath,
                       bytestring,
                       text,
                       random,   
                       log-domain,
                       statistics,    
                       array          
  default-language:    Haskell2010
